# occasion_back

./: .gitignore  pyproject.toml
occasion/: manage.py  pyproject.toml
occasion/basics/: admin.py  consts.py  exceptions.py  helpers.py  models.py
occasion/basics/base/: services.py
occasion/directory/: admin.py  models.py
occasion/directory/migrations/: 0001_initial.py  0002_region_country_alter_region_name.py
occasion/occasion/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
occasion/occasion_api/: admin.py  apps.py  models.py  urls.py
occasion/occasion_api/migrations/: 0001_initial.py
occasion/occasion_bot/: admin.py  apps.py  consts.py  models.py  urls.py
occasion/occasion_bot/migrations/: 0001_initial.py
occasion/telegram/: admin.py  consts.py  models.py
occasion/telegram/api/: client.py
occasion/telegram/migrations/: 0001_initial.py  0002_telegramchannel_members.py  0003_telegramchannel_from_region_and_more.py  0004_rename_channel_id_telegramchannel_tg_id.py
occasion/users/: admin.py  models.py  serializers.py  urls.py  views.py
occasion/users/migrations/: 0001_initial.py
